# Deep-Learning---CV

A1 - Representation Learning/: .gitignore  README.md  alexnet.py  dataset.py  googlenet.py  main.py  pyproject.toml  resnet.py  run.py  train.py  vit.py
A2 - Segmentation Assignment/: .gitignore  ImageSegmentation_README.md  ObjectDetection_README.md  main.py  pyproject.toml  run.py  run_detection.py  run_detection.sh  run_seg.py  run_seg.sh
A3 - Self-Supervised Learning/: .gitignore  README.md  run.py  run_all.sh
A3 - Self-Supervised Learning/models/: dino.py  mae.py  simclr.py
A4 - Generative Models/: .gitignore  README.md  main.py  pyproject.toml
A5 - Graph Neural Network/: README.md  a5.ipynb  gitignore  main.py  pyproject.toml  run.py  run_all.sh
